<resources>
    <string name="app_name">Quick Verse</string>
    <string name="hello_world_text">100</string>
    <string name="toast_text">Toast</string>
    <string name="count_text">Count</string>
    <string name="random_text">Random</string>
    <string name="random_heading">Here is a random number between 0 and %1d</string>
    <string name="old_testament_text">Old Testament</string>
    <string name="new_testament_text">New Testament</string>
    <string name="chapter_verse_separator">:</string>
    <string name="esv_api_key_unavailable">Oh no! The application was built without an ESV API key, so it will exit.</string>
    <string name="ok">OK</string>
</resources>
