<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/otVerticalLayout"
        android:layout_width="0dp"
        android:layout_height="319dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ntVerticalLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/otTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/old_testament_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="184dp" />

        <LinearLayout
            android:id="@+id/otHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="257dp">

            <Spinner
                android:id="@+id/otBookSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="55"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="286dp" />

            <Spinner
                android:id="@+id/otChapterSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="22"
                android:textAlignment="viewEnd"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="286dp" />

            <TextView
                android:id="@+id/otColonTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chapter_verse_separator"
                android:textSize="28sp"
                tools:layout_editor_absoluteX="224dp"
                tools:layout_editor_absoluteY="286dp" />

            <Spinner
                android:id="@+id/otVerseSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="22"
                android:textAlignment="textStart"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="276dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/otVerseText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scrollbars="vertical"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="356dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ntVerticalLayout"
        android:layout_width="0dp"
        android:layout_height="319dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otVerticalLayout">

        <TextView
            android:id="@+id/ntTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/new_testament_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="184dp" />

        <LinearLayout
            android:id="@+id/ntHorizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="257dp">

            <Spinner
                android:id="@+id/ntBookSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="55"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="286dp" />

            <Spinner
                android:id="@+id/ntChapterSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="22"
                android:textAlignment="viewEnd"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="286dp" />

            <TextView
                android:id="@+id/ntColonTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chapter_verse_separator"
                android:textSize="28sp"
                tools:layout_editor_absoluteX="224dp"
                tools:layout_editor_absoluteY="286dp" />

            <Spinner
                android:id="@+id/ntVerseSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="22"
                android:textAlignment="textStart"
                tools:layout_editor_absoluteX="243dp"
                tools:layout_editor_absoluteY="276dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ntVerseText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scrollbars="vertical"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="356dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>